--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           source: .next,public,package.json,package-lock.json
-          target: /var/www/your-app/
+          target: /var/www/my-app/
 
       - name: EC2에서 실행
         uses: appleboy/ssh-action@v1.0.3
@@ -40,6 +40,6 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            cd /var/www/your-app
+            cd /var/www/my-app
             npm install
             npm start
