--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,48 +1,26 @@
-name: EC2 배포 ## 워크플로우 이름
+name: EC2 Deploy with Docker
 
-on: ## 실행 트리거
+on:
   push:
     branches:
-      - main ## main 브랜치에 푸시될 때
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest ## 실행 환경
-
+    runs-on: ubuntu-latest
     steps:
-      - name: 코드 체크아웃
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Node 설정
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: 의존성 설치
-        run: npm ci
-
-      - name: 빌드
-        run: npm run build
-
-      - name: EC2로 복사
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: .next,public,package.json,package-lock.json
-          target: /var/www/my-app/
-
-      - name: EC2에서 실행zz (pm2 사용)
+      - name: SSH into EC2 and run Docker container
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            cd /var/www/my-app
-            npm install
-            sudo npm install -g pm2 # pm2 전역 설치 (이미 설치되어 있다면 건너뛰어짐)
-            pm2 start npm --name "your-app" -- start # npm start 명령어 실행 및 "your-app" 이름으로 pm2에 등록
-            pm2 save # 현재 실행 중인 프로세스 목록 저장 (서버 재부팅 시 자동 실행)
-            sudo pm2 startup systemd -u ${{ secrets.EC2_USER }} --hp /home/${{ secrets.EC2_USER }} # 서버 부팅 시 pm2 자동 시작 설정
+            docker pull seaproject/my-app:latest # 최신 이미지 pull
+            docker stop my-app || true  # 기존 컨테이너 중지 (에러 무시)
+            docker rm my-app || true    # 기존 컨테이너 삭제 (에러 무시)
+            docker run -d --name my-app -p 3000:3000 seaproject/my-app:latest # 새 컨테이너 실행
+            docker system prune -a -f # 안쓰는 이미지/컨테이너 정리
