--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
             docker stop my-app || true  # 기존 컨테이너 중지 (에러 무시)
             docker rm my-app || true    # 기존 컨테이너 삭제 (에러 무시)
             docker run -d --name my-app -p 3000:3000 seaproject/my-app:latest # 새 컨테이너 실행
-            docker system prune -a -f # 안쓰는 이미지/컨테이너 정리
+            docker system prune -a -f # 안쓰는 이미지/컨테이너 정리11
