--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,21 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            docker pull seaproject/my-app:latest # 최신 이미지 pull
-            docker stop my-app || true  # 기존 컨테이너 중지 (에러 무시)
-            docker rm my-app || true    # 기존 컨테이너 삭제 (에러 무시)
-            docker run -d --name my-app -p 3000:3000 seaproject/my-app:latest # 새 컨테이너 실행
-            docker system prune -a -f # 안쓰는 이미지/컨테이너 정리11
+            # Docker 설치 (이미 설치되어 있다면 이 부분은 건너뛰어짐)
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
+
+            # 현재 사용자를 docker 그룹에 추가
+            sudo usermod -aG docker $USER
+
+            # 그룹 변경 적용 (또는 EC2 서버에 재접속)
+            newgrp docker
+
+            # 도커 실행
+            docker pull seaproject/my-app:latest
+            docker stop my-app || true
+            docker rm my-app || true
+            docker run -d --name my-app -p 3000:3000 seaproject/my-app:latest
+            docker system prune -a -f
