--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # v4로 업데이트
 
       - name: SSH into EC2 and setup Docker
         uses: appleboy/ssh-action@v1.0.3
@@ -24,9 +24,8 @@ jobs:
             sudo apt-get install -y docker.io
             sudo systemctl start docker
             sudo systemctl enable docker
-
-            # 현재 사용자를 docker 그룹에 추가
-            sudo usermod -aG docker $USER
+            sudo usermod -aG docker $USER  # 현재 사용자를 docker 그룹에 추가
+            newgrp docker  # 그룹 변경 적용
 
       - name: SSH into EC2 and run Docker container
         uses: appleboy/ssh-action@v1.0.3
@@ -35,8 +34,12 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            # 그룹 변경 적용 (또는 EC2 서버에 재접속)11s
-            newgrp docker
-
-            # 애플리케이션 실행 스크립트 실행
-            /home/ubuntu/run_app.sh
+            # 최신 이미지 pull
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest  # latest 태그 사용
+            
+            # 기존 컨테이너 중지 및 삭제
+            docker stop my-container || true  # 에러 무시
+            docker rm my-container || true    # 에러 무시
+            
+            # 새 컨테이너 실행
+            docker run -d --name my-container -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
