--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,14 @@ on:
       - main
 
 jobs:
-  build-image:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Docker 이미지 빌드
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }} .
 
-  push-image:
-    runs-on: ubuntu-latest
-    needs: build-image  # build-image 작업이 완료된 후에 실행
-    steps:
       - name: Docker Hub에 로그인
         uses: docker/login-action@v2
         with:
@@ -31,7 +28,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: push-image  # push-image 작업이 완료된 후에 실행
+    needs: build-and-push  # build-and-push 작업 완료 후 실행
     steps:
       - name: SSH into EC2 and setup Docker
         uses: appleboy/ssh-action@v1.0.3
